Add python's site-packages directory to the module search path.

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ AC_PREREQ([2.65])
 AC_INIT([kraken], [0.1], [smcintyre@securestate.net])
 AM_INIT_AUTOMAKE([kraken], [0.1])
 AC_CONFIG_SRCDIR([src/kraken.c])
-AC_ARG_WITH([log4c], AS_HELP_STRING([--without-log4c], [Build without logging capabilities]))
+AC_ARG_WITH([log4c], AS_HELP_STRING([--without-log4c], [do not use log4c]))
 
 # Checks for programs.
 AC_PROG_CC
@@ -24,6 +24,10 @@ AS_IF([test -z "$PYTHON_INCLUDE"], [
 	])
 	AC_MSG_CHECKING([python include flags])
 	PYTHON_INCLUDE=`$PYTHON_CONFIG --includes`
+	PYTHON_SITE_PACKAGES=`python$PYTHON_VERSION -c "from distutils.sysconfig import get_python_lib; print(get_python_lib())"`
+	AS_IF([test -n "$PYTHON_SITE_PACKAGES"], [
+		AC_DEFINE_UNQUOTED([PYTHON_SITE_PACKAGES], ["$PYTHON_SITE_PACKAGES"])
+	])
 	AC_MSG_RESULT([$PYTHON_INCLUDE])
 ])
 
