Add a simple application menu item.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,2 +1,11 @@
 pluginsdir = $(datarootdir)/@PACKAGE@/plugins
 plugins_DATA = plugins/*
+
+desktopdir = $(datadir)/applications
+desktop_DATA = kraken.desktop
+UPDATE_DESKTOP = update-desktop-database $(datadir)/applications || :
+
+install-data-hook:
+	$(UPDATE_DESKTOP)
+uninstall-hook:
+	$(UPDATE_DESKTOP)
