Fix g_thread_init deprecation logic, again.

--- a/configure.ac
+++ b/configure.ac
@@ -78,14 +78,14 @@ AS_IF([test "x$with_log4c" != "xno"], [
 ])
 
 # Checks for required modules.
-PKG_CHECK_MODULES(LIBXML, libxml-2.0 >= 2.5.0, [], [])
-PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.20.0, [], [
+PKG_CHECK_MODULES([LIBXML], [libxml-2.0 >= 2.5.0], [], [])
+PKG_CHECK_MODULES([GTK], [gtk+-2.0 >= 2.20.0], [], [
 	AC_MSG_NOTICE([could not find the gtk library])
 	AC_MSG_NOTICE([please install libgtk+-2.0 >= 2.20.0])
 	exit 1
 ])
-PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.24.0, [
-	PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.32.0, [
+PKG_CHECK_MODULES([GLIB], [glib-2.0 >= 2.24.0], [
+	PKG_CHECK_MODULES([GLIBX], [glib-2.0 >= 2.32.0], [
 		AC_MSG_NOTICE([g_thread_init support has been disabled, usage is deprecated])
 	], [
 		AC_CHECK_LIB([gthread-2.0], [g_thread_init], [
